# bank

./: .gitignore  Admin.h  CMakeLists.txt  Client.h  Employee.h  Person.h  Validation.h  bank system  bank system.cpp
bank system.dSYM/Contents/: Info.plist
bank system.dSYM/Contents/Resources/DWARF/: bank system
bank system.dSYM/Contents/Resources/Relocations/aarch64/: bank system.yml
